Fix footer alignment - titles and links now left-aligned

--- a/suite-styles.css
+++ b/suite-styles.css
@@ -703,6 +703,7 @@ h3 {
 .footer-column {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
 }
 
 .footer-column h5 {
